# S.Y.N.C

./: .gitignore  CLAUDE.md  calculate.txt  domain.md  iam_user_profile_seed_data.json  iam_users_seed_data.json  marketplace_final_final_final.json  onboarding.txt  setting-profile.txt  social_comments_seed_data.json  social_interactions_seed_data.json  social_posts_seed_data.json  social_seed_data.json  social_seed_report.json  social_userFollows_seed_data.json  temp_router.txt
.githooks/: pre-commit
ai-ecosystem/agentic-lifestyle/: .env.example  .gitignore  README.md  pyproject.toml
ai-ecosystem/agentic-lifestyle/infra/sql/: exercise_catalog_pgvector.sql
ai-ecosystem/agentic-lifestyle/rules/: .cursorrules
ai-ecosystem/agentic-lifestyle/scripts/: run-dev.ps1
ai-ecosystem/agentic-lifestyle/src/sync_agent/: __init__.py  main.py
ai-ecosystem/agentic-lifestyle/src/sync_agent/api/: __init__.py  app.py  dependencies.py
ai-ecosystem/agentic-lifestyle/src/sync_agent/application/: __init__.py  agent_runner.py  jit_context_fetcher.py  text_chunking.py  voice_pipeline.py
ai-ecosystem/agentic-lifestyle/src/sync_agent/core/: __init__.py  config.py  exceptions.py  logging.py
ai-ecosystem/agentic-lifestyle/src/sync_agent/domain/: __init__.py
ai-ecosystem/agentic-lifestyle/src/sync_agent/infrastructure/: __init__.py
ai-ecosystem/agentic-lifestyle/tests/: conftest.py
ai-ecosystem/agentic-lifestyle/tests/unit/: test_audio_buffer.py  test_text_chunking.py
ai-ecosystem/agentic-lifestyle/tests/unit/graph/: test_agent_state.py  test_routing.py  test_tool_execution.py
(+1680 files in other folders)
