[project]
name = "sync-agent"
version = "0.1.0"
description = "SYNC Agentic Lifestyle — real-time voice gateway (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "groq>=0.13.0",
    "openai>=1.55.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]
agent = [
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",
    "aio-pika>=9.4.0",
]
rag = [
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "sentence-transformers>=3.3.0",
]

[project.scripts]
sync-agent = "sync_agent.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sync_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
